APIテストの仕組みを作って、楽曲一覧APIの テストを実装

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -45,3 +45,8 @@ Style/IndentationConsistency:
 # 一行のみのif式を許可
 Style/GuardClause:
   Enabled: false
+
+# テストコードではブロック長超過を許容
+Metrics/BlockLength:
+  Exclude:
+      - 'spec/**/*.rb'
