--- a/package.json
+++ b/package.json
@@ -1,5 +1,31 @@
 {
   "name": "pankara",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.18.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "eslint-loader": "^2.0.0",
+    "moment": "^2.19.4",
+    "url-loader": "^1.0.1",
+    "vue": "^2.4.1",
+    "vue-loader": "^15.1.0",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.4.1",
+    "webpack-dev-server": "^3.1.4"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3"
+  }
 }
