Songs#historiesのテストを実装など

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -50,11 +50,16 @@ Style/GuardClause:
 Metrics/AbcSize:
   Max: 20
 
+# 子クラスでの実装に期待したメソッド呼び出しを許可
+Rails/LexicallyScopedActionFilter:
+  Enabled: false
+
 # テストコードではブロック長超過を許容
 Metrics/BlockLength:
   Exclude:
       - 'spec/**/*.rb'
 
-# 子クラスでの実装に期待したメソッド呼び出しを許可
-Rails/LexicallyScopedActionFilter:
-  Enabled: false
+# テストコードでは一行の文字数超過を許容
+Metrics/LineLength:
+  Exclude:
+      - 'spec/**/*.rb'
