--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "buefy": "^0.6.5",
     "eslint-loader": "^2.0.0",
     "moment": "^2.19.4",
     "url-loader": "^1.0.1",
