--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "buefy": "^0.6.5",
     "eslint-loader": "^2.0.0",
     "moment": "^2.19.4",
-    "url-loader": "^1.0.1",
     "vue": "^2.4.1",
     "vue-loader": "^15.1.0",
     "vue-router": "^3.0.1",
@@ -26,9 +25,11 @@
     "babel-register": "^6.26.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
     "node-sass": "^4.5.3",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
   }
