--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "axios": "^0.18.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "buefy": "^0.6.5",
     "eslint-loader": "^2.0.0",
     "moment": "^2.19.4",
     "vue": "^2.4.1",
     "vue-loader": "^15.1.0",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.4.1",
+    "vuetify": "^1.0.18",
     "webpack-dev-server": "^3.1.4"
   },
   "devDependencies": {
