--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,8 +1,8 @@
 development:
-  secret_key_base: <%= ENV['secret_key_base'] %>
+  secret_key_base: development
 
 test:
-  secret_key_base: <%= ENV['secret_key_base'] %>
+  secret_key_base: test
 
 production:
   secret_key_base: <%= ENV['secret_key_base'] %>
