--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.4.1",
     "vuetify": "^1.0.18",
+    "vuex": "^3.0.1",
     "webpack-dev-server": "^3.1.4"
   },
   "devDependencies": {
