--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.18.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.5",
+    "chart.js": "^2.7.2",
     "eslint-loader": "^2.0.0",
     "moment": "^2.22.2",
     "vue": "^2.4.1",
+    "vue-chartjs": "^3.4.0",
     "vue-loader": "^15.2.4",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.4.1",
