日付に関するrubocopの指摘を無視するように

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -59,6 +59,10 @@ Rails/LexicallyScopedActionFilter:
 Naming/MemoizedInstanceVariableName:
   Enabled: false
 
+# タイムゾーンに関する指摘を無視
+Rails/TimeZone:
+  Enabled: false
+
 # シリアライズコード及びテストコードでは各種ルールを許容
 Metrics/BlockLength:
   Exclude:
