rubocopの設定を修正。ガード節後の空行を許容

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -63,6 +63,10 @@ Naming/MemoizedInstanceVariableName:
 Rails/TimeZone:
   Enabled: false
 
+# ガード節の直後に空行なくても許す
+Layout/EmptyLineAfterGuardClause:
+  Enabled: false
+
 # シリアライズコード及びテストコードでは各種ルールを許容
 Metrics/BlockLength:
   Exclude:
