--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -35,7 +36,7 @@
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.15.1",
-    "webpack-cli": "^2.1.5"
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1"
   }
 }
