データベースのパスワードを暗号化

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ spec/examples.txt
 app/assets/javascripts/application.js
 !.gitkeep
 tags
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
