#32 apt-get updateするように

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,4 @@ jobs:
     working_directory: /usr/local/pankara
     steps:
       - checkout
-      - run:
-          name: runテスト
-          command: echo 'hoge'
-
+      - run: apt-get update -qq
