#32 必要なパッケージ入れるように

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,6 @@ jobs:
       - checkout
       - run:
           name: パッケージを最新化
-          command: apt-get update -qq
+          command: |
+            apt-get update -qq
+            apt-get install -y mysql-client build-essential
