--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,12 @@ jobs:
   build:
     docker:
       - image: ruby:2.5.1
+      - image: mysql:8.0.4
+          environment:
+            MYSQL_DATABASE: pankara_test
+            MYSQL_USER: root
+            MYSQL_ROOT_PASSWORD: 1q2w3e4r
+          command: command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci --init-connect="SET NAMES utf8"
     working_directory: /usr/local/pankara
     steps:
       - checkout
