--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ development:
 test:
   <<: *default
   password: <%= Rails.application.credentials.dig(:development, :database, :password) %>
-  database: pankara_test
+  database: '127.0.0.1'
 
 production:
   <<: *default
