--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,8 @@ development:
 test:
   <<: *default
   password: <%= Rails.application.credentials.dig(:development, :database, :password) %>
-  database: <%= '127.0.0.1' %>
+  host: 127.0.0.1
+  database: pankara_test
 
 production:
   <<: *default
