#32 DB初期化処理を追加

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,5 +21,8 @@ jobs:
           name: bundle install
           command: bundle install
       - run:
+          name: create db
+          command: bundle exec rails db:setup test
+      - run:
           name: rspec
           command: bundle exec rspec -f d
