#32 認証の初期設定を追加2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           command: bundle install
       - run:
           name: authentication config
-          command: rails generate knock:install
+          command: rails runner 'p Rails.application.credentials.secret_key_base'
       - run:
           name: create db
           command: bundle exec rails db:setup test
