--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
 
 test:
   <<: *default
-  host: 127.0.0.1
+  host: <%= ENV['CI'] ? '127.0.0.1' : 'pankara_db' %>
   database: pankara_test
   password: 1q2w3e4r
 
