rubocopの制限を緩和

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -81,6 +81,7 @@ Metrics/BlockLength:
       - 'spec/**/*.rb'
       - 'lib/tasks/**/*.rake'
 Metrics/LineLength:
+  Max: 95
   Exclude:
       - 'app/lib/json/*.rb'
       - 'spec/**/*.rb'
