--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ spec/examples.txt
 app/assets/javascripts/application.js
 !.gitkeep
 tags
+vendor/*
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
